# regvm

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
.cargo/: config.toml
crates/xtask/: Cargo.toml
src/: lexer.h  machine.rs  main.c  main.h  main.h.pch  main.rs  vm.c  vm.h
