[workspace]
resolver = "3"
members = ["crates/xtask"]

[workspace.package]
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
description = "Simple register machine implementation (counter machine)"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/haruki7049/regvm"
publish = false

[package]
name = "regvm"
authors.workspace = true
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dependencies]
thiserror.workspace = true
